<?xml version="1.0"?>
<package format="3">
  <name>gravity_compensation_controller</name>
  <version>0.0.1</version>
  <description>Simple gravity compensation for Panda robot</description>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>
  <license>Apache 2.0</license>

  <author>Krzysztof Wojciechowski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pinocchio</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/gravity_compensation_controller_plugins.xml" />
  </export>

</package>