<?xml version="1.0"?>
<package format="3">
  <name>gravity_compensation_controller</name>
  <version>0.0.1</version>
  <description>Simple gravity compensation for Panda robot.</description>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>